--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Banco Real</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+    <link rel="shortcut icon" href="img/bank.ico">
 </head>
 <body>
     <header>
